# source

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_unix.yml  publish-debug.yml  release.yml
Editor/: EditorItems.cpp  EditorMapInfo.cpp  EditorMercs.cpp  EditorTerrain.cpp  Sector Summary.cpp  editscreen.cpp
Ja2/: FeaturesScreen.cpp  GameInitOptionsScreen.cpp  GameSettings.cpp  GameVersion.h  HelpScreen.cpp  Init.cpp  Intro.cpp  MPChatScreen.cpp  MPHostScreen.cpp  MPJoinScreen.cpp  MPScoreScreen.cpp  MPXmlTeams.cpp  MainMenuScreen.cpp  MessageBoxScreen.cpp  Options Screen.cpp  SaveLoadGame.cpp  SaveLoadGame.h  SaveLoadScreen.cpp  SaveLoadScreen.h  TimeLogging.cpp  XML_DifficultySettings.cpp  gameloop.cpp  gamescreen.cpp  jascreens.cpp  profiler.cpp  profiler.h
Laptop/: AimMembers.cpp  AimSort.cpp  BaseTable.cpp  BaseTable.h  BobbyR.cpp  BobbyRGuns.cpp  BobbyRMailOrder.cpp  BobbyRShipments.cpp  BriefingRoom.cpp  BriefingRoomM.cpp  BrokenLink.cpp  CampaignHistoryMain.cpp  CampaignHistoryMain.h  CampaignStats.cpp  DropDown.cpp  DropDown.h  DynamicDialogueWidget.cpp  Encyclopedia_Data_new.cpp  FacilityProduction.cpp  IMP Background.cpp  IMP Begin Screen.cpp  IMP Gear.cpp  IMP HomePage.cpp  IMP Minor Trait.cpp  IMP Personality Entrance.h  IMP Personality Quiz.cpp  Intelmarket.cpp  MilitiaWebsite.cpp  PMC.cpp  PostalService.cpp  PostalService.h  XML_BriefingRoom.cpp  XML_DeliveryMethods.cpp  XML_ShippingDestinations.cpp  email.cpp  email.h  files.cpp  files.h  finances.cpp  florist Gallery.cpp  (+10 more)
Multiplayer/: CMakeLists.txt  client.cpp  mp_stubs.cpp  server.cpp
Multiplayer/raknet/: BitStream.h
Strategic/: AI Viewer.cpp  Assignments.cpp  Assignments.h  Facilities.cpp  Game Init.cpp  Ja25 Strategic Ai.cpp  LuaInitNPCs.cpp  Map Screen Interface Bottom.cpp  Map Screen Interface Map Inventory.cpp  Map Screen Interface Map.cpp  Map Screen Interface.cpp  Map Screen Interface.h  MilitiaIndividual.cpp  MilitiaSquads.cpp  PreBattle Interface.cpp  Queen Command.cpp  Quest Debug System.cpp  QuestText.h  Rebel Command.cpp  Scheduling.cpp  Scheduling.h  Strategic AI.cpp  Strategic Event Handler.cpp  Strategic Merc Handler.cpp  Strategic Mines LUA.cpp  Strategic Mines.cpp  Strategic Movement.cpp  Town Militia.cpp  Town Militia.h  UndergroundInit.cpp  UndergroundInit.h  mapscreen.cpp  mapscreen.h  strategicmap.cpp  strategicmap.h
Tactical/: Arms Dealer Init.cpp  Auto Bandage.cpp  BinaryHeap.hpp  Campaign.cpp  Campaign.h  Civ Quotes.cpp  Dialogue Control.cpp  Dialogue Control.h  DisplayCover.cpp  DynamicDialogue.cpp  Faces.cpp  GAP.H  GAP.cpp  Handle Items.cpp  Handle UI.cpp  Interface Control.cpp  Interface Control.h  Interface Dialogue.cpp  Interface Enhanced.cpp  Interface Items.cpp  Interface Items.h  Interface Panels.cpp  Interface Utils.cpp  Interface Utils.h  Interface.cpp  Interface.h  Inventory Choosing.cpp  Item Types.cpp  Item Types.h  Items.cpp  Items.h  Keys.cpp  LOS.cpp  LOS.h  Minigame.cpp  Overhead Types.h  Overhead.cpp  Rain.cpp  Rotting Corpses.cpp  Rotting Corpses.h  (+28 more)
Tactical/LogicalBodyTypes/: AbstractXMLLoader.cpp  BodyTypeDB.cpp  EnumeratorDB.cpp  EnumeratorDB.h  FilterDB.cpp  Layers.cpp  PaletteDB.cpp  PaletteTable.cpp  Singleton.h  SurfaceCache.h  SurfaceDB.cpp
TacticalAI/: AIInternals.h  AIMain.cpp  NPC.cpp  NPC.h
TileEngine/: Explosion Control.cpp  Explosion Control.h  Interactive Tiles.cpp  Isometric Utils.cpp  Map Edgepoints.cpp  Radar Screen.cpp  Radar Screen.h  Render Dirty.cpp  SaveLoadMap.cpp  Shade Table Util.cpp  Smell.cpp  SmokeEffects.cpp  SmokeEffects.h  Tactical Placement GUI.cpp  Tile Cache.cpp  Tile Cache.h  Tile Surface.cpp  Tile Surface.h  environment.cpp  lighting.cpp  lighting.h  overhead map.cpp  physics.cpp  renderworld.cpp  tiledef.h  worlddef.cpp  worldman.cpp
Utils/: Animated ProgressBar.cpp  Animated ProgressBar.h  Cinematics Bink.cpp  Cinematics Bink.h  Cinematics.cpp  Cinematics.h  Cursors.cpp  Debug Control.cpp  Debug Control.h  Encrypted File.cpp  Encrypted File.h  Event Pump.cpp  Font Control.cpp  INIReader.cpp  INIReader.h  KeyMap.cpp  LocalizedStrings.cpp  MapUtility.cpp  MercTextBox.cpp  Music Control.cpp  PopUpBox.cpp  PopUpBox.h  Quantize Wrap.cpp  Quantize.cpp  STIConvert.cpp  Slider.cpp  Text Input.cpp  Text Input.h  Text Utils.cpp  Timer Control.cpp  Utilities.cpp  Utilities.h  Utils All.h  WordWrap.cpp  WordWrap.h  XMLProperties.cpp  XMLWriter.cpp  XML_Items.cpp  XML_Parser.h  dsutil.cpp  (+7 more)
docs/: MAP_FORMAT.md  RGBA8888_AND_ARTWORK.md  SAVE_FORMAT.md  SDL3_PORT.md
ext/: versions.txt
ext/VFS/ext/7z/src/: CpuArch.c
ext/VFS/include/vfs/Core/: vfs_debug.h  vfs_types.h
ext/VFS/include/vfs/Tools/: vfs_log.h
ext/VFS/src/Core/: vfs_os_functions.cpp
ext/VFS/src/Tools/: vfs_log.cpp
ext/libpng/: CMakeLists.txt  pngconf.h
ext/libsmacker/: CMakeLists.txt
ext/zlib/: CMakeLists.txt  zutil.h
i18n/: ExportStrings.cpp  Multi Language Graphic Utils.cpp  _ChineseText.cpp  _DutchText.cpp  _EnglishText.cpp  _FrenchText.cpp  _GermanText.cpp  _ItalianText.cpp  _PolishText.cpp  _RussianText.cpp
i18n/include/: Text.h
lua/: CMakeLists.txt  lua.cpp  lua_env.cpp  lua_table.h  lua_tactical.cpp  lwstring.cpp
sgp/: Button System.cpp  CMakeLists.txt  DEBUG.H  DEBUG.cpp  DirectDraw Calls.cpp  DirectDraw Calls.h  DirectX Common.cpp  FileMan.cpp  FileMan.h  Font.cpp  LibraryDataBase.cpp  LibraryDataBase.h  MemMan.cpp  MemMan.h  Mss-old.h  Mss.h  PngLoader.cpp  Random.cpp  SaveSerializer.cpp  SaveSerializer.h  WinFont.cpp  WinFont.h  debug_util.cpp  himage.cpp  himage.h  input.cpp  line.cpp  line.h  mousesystem.cpp  msvc_compat.h  pixfmt.h  sdl_input.cpp  sdl_input.h  sdl_video.cpp  sdl_vsurface.cpp  sgp.cpp  sgp.h  sgp_auto_memory.h  sgp_non_win32_globals.cpp  sgp_non_win32_stubs.cpp  (+15 more)
